--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "start": "cd example && ../node_modules/.bin/browservefy world.js 8080 -- -d",
+    "start": "cd example && ../node_modules/.bin/beefy world.js 8080 -- -d",
     "gh-pages": "cp -R ./example/* ./ && browserify world.js -o world.js"
   },
   "devDependencies": {
-    "voxel-engine": "~0.17.1",
-    "browservefy": "0.0.10",
-    "voxel-player": "~0.1.0"
+    "voxel-engine": "~0.20.0",
+    "voxel-player": "~0.1.0",
+    "beefy": "~1.0.0"
   },
   "peerDependencies": {
-    "voxel-engine": "~0.17.1"
+    "voxel-engine": ">= 0.17.1"
   },
   "dependencies": {
-    "voxel-mesh": "~0.2.1",
+    "voxel-mesh": "~0.3.0",
     "voxel": "~0.3.1",
     "perlin": "0.0.2"
   }
